--- a/build.yaml
+++ b/build.yaml
@@ -16,9 +16,15 @@
 #     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
 #     artifact-name: corne_left_with_logging
 #
----
-include:
-  - board: nice_nano_v2
-    shield: kyria_left
-  - board: nice_nano_v2
-    shield: kyria_right
+#---
+#include:
+#  - board: nice_nano_v2
+#    shield: kyria_left
+#  - board: nice_nano_v2
+#    shield: kyria_right
+    
+on: [workflow_dispatch]
+
+jobs:
+  build:
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
