--- a/build.yaml
+++ b/build.yaml
@@ -17,9 +17,9 @@
 #     artifact-name: corne_left_with_logging
 #
 #---
-#include:
-#  - board: nice_nano_v2
-#    shield: kyria_left
+include:
+- board: nice_nano_v2
+    shield: kyria_left
 #  - board: nice_nano_v2
 #    shield: kyria_right
     
