--- a/build.yaml
+++ b/build.yaml
@@ -20,8 +20,8 @@
 include:
 - board: nice_nano_v2
     shield: kyria_left
-#  - board: nice_nano_v2
-#    shield: kyria_right
+  - board: nice_nano_v2
+    shield: kyria_right
     
 on: [workflow_dispatch]
 
