--- a/config/kyria.conf
+++ b/config/kyria.conf
@@ -8,3 +8,8 @@
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
+
+CONFIG_SPI=y
+CONFIG_INPUT=y
+CONFIG_ZMK_MOUSE=y
+CONFIG_PMW3610=y
