--- a/build.yaml
+++ b/build.yaml
@@ -22,9 +22,9 @@ jobs:
   build:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
 
-include:
-  - board: nice_nano_v2
-    shield: kyria_left
-  - board: nice_nano_v2
-    shield: kyria_right
+#include:
+#  - board: nice_nano_v2
+#    shield: kyria_left
+#  - board: nice_nano_v2
+#    shield: kyria_right
     
