--- a/build.yaml
+++ b/build.yaml
@@ -17,14 +17,14 @@
 #     artifact-name: corne_left_with_logging
 #
 #---
-on: [workflow_dispatch]
-jobs:
-  build:
-    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+#on: [workflow_dispatch]
+#jobs:
+#  build:
+#    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
 
-#include:
-#  - board: nice_nano_v2
-#    shield: kyria_left
-#  - board: nice_nano_v2
-#    shield: kyria_right
+include:
+  - board: nice_nano_v2
+    shield: kyria_left
+  - board: nice_nano_v2
+    shield: kyria_right
     
