--- a/build.yaml
+++ b/build.yaml
@@ -25,6 +25,6 @@
 include:
   - board: nice_nano_v2
     shield: kyria_left
-  - board: nice_nano_v2
-    shield: kyria_right
+#  - board: nice_nano_v2
+#    shield: kyria_right
     
