--- a/build.yaml
+++ b/build.yaml
@@ -23,8 +23,7 @@
 #    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
 
 include:
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: kyria_left
-#  - board: nice_nano_v2
-#    shield: kyria_right
-    
+  - board: nice_nano
+    shield: kyria_right
