--- a/config/kyria.conf
+++ b/config/kyria.conf
@@ -9,7 +9,7 @@
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 
-CONFIG_SPI=y
-CONFIG_INPUT=y
-CONFIG_ZMK_MOUSE=y
-CONFIG_PMW3610=y
+#CONFIG_SPI=y
+#CONFIG_INPUT=y
+#CONFIG_ZMK_MOUSE=y
+#CONFIG_PMW3610=y
