--- a/build.yaml
+++ b/build.yaml
@@ -20,7 +20,7 @@ include:
     shield: corne36_left
   - board: nice_nano_v2
     shield: corne36_right
-  - board: seeeduino_xiao_ble
+  - board: nice_nano_v2
     shield: corne36_tball0
   - board: seeeduino_xiao_ble
     shield: corne36_tball1
@@ -29,21 +29,21 @@ include:
   - board: seeeduino_xiao_ble
     shield: corne36_tpad0
 
-  - board: nice_nano_v2
-    shield: nano18_left
-  - board: nice_nano_v2
-    shield: nano18_right
+ # - board: nice_nano_v2
+ #   shield: nano18_left
+ # - board: nice_nano_v2
+ #   shield: nano18_right
 
-  - board: seeeduino_xiao_ble
-    shield: sparklite_left
-  - board: seeeduino_xiao_ble
-    shield: sparklite_right
+  # - board: seeeduino_xiao_ble
+  #   shield: sparklite_left
+  # - board: seeeduino_xiao_ble
+  #   shield: sparklite_right
 
-  - board: nice_nano_v2
-    shield: tumka36
+  # - board: nice_nano_v2
+  #   shield: tumka36
 
-  - board: waveshare_rp2040_zero
-    shield: zero36
+  # - board: waveshare_rp2040_zero
+  #   shield: zero36
 
-  - board: nologo_nano33_ble
-    shield: m330
+  # - board: nologo_nano33_ble
+  #   shield: m330
