--- a/build.yaml
+++ b/build.yaml
@@ -22,7 +22,7 @@ include:
     shield: corne36_right
   - board: nice_nano_v2
     shield: corne36_tball0
-  - board: seeeduino_xiao_ble
+  - board: nice_nano_v2
     shield: corne36_tball1
   - board: seeeduino_xiao_ble
     shield: corne36_tpoint0
