--- a/config/boards/shields/corne36/corne36_tball1.conf
+++ b/config/boards/shields/corne36/corne36_tball1.conf
@@ -79,9 +79,10 @@ CONFIG_ZMK_INSOMNIA_PING_INTERVAL=15000
 # CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
 
 # Allow second peripheral (for pairing trackball peripheral)
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
+CONFIG_BT_MAX_PAIRED=8
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=5
 CONFIG_ZMK_SPLIT_BLE_PREF_WEAK_BOND=y
-# CONFIG_ZMK_SPLIT_BLE_PREF_CONTINUOUS_SCAN_WINDOW=30000
+CONFIG_ZMK_SPLIT_BLE_PREF_CONTINUOUS_SCAN_WINDOW=12000
 
 # Enable Analog Input
 # CONFIG_ADC=y
