--- a/config/boards/shields/corne36/corne36_tball1.conf
+++ b/config/boards/shields/corne36/corne36_tball1.conf
@@ -80,6 +80,10 @@ CONFIG_ZMK_INSOMNIA_PING_INTERVAL=15000
 
 # Allow second peripheral (for pairing trackball peripheral)
 CONFIG_BT_MAX_PAIRED=8
+
+
+#   #define ZMK_SPLIT_BLE_PERIPHERAL_COUNT CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS
+
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=5
 CONFIG_ZMK_SPLIT_BLE_PREF_WEAK_BOND=y
 CONFIG_ZMK_SPLIT_BLE_PREF_CONTINUOUS_SCAN_WINDOW=12000
