--- a/config/boards/shields/corne36/corne36_tball1.conf
+++ b/config/boards/shields/corne36/corne36_tball1.conf
@@ -13,6 +13,12 @@ CONFIG_ZMK_MOUSE=y
 CONFIG_INPUT=y
 CONFIG_GPIO=y
 
+
+# CONFIG_PMW3610_SWAP_XY=y
+# CONFIG_PMW3610_INVERT_X=y
+# CONFIG_PMW3610_INVERT_Y=y
+# CONFIG_PMW3610_REPORT_INTERVAL_MIN=12
+# CONFIG_PMW3610_LOG_LEVEL_DBG=y
 # Maximum number of combos per key
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=12
 
@@ -81,7 +87,9 @@ CONFIG_ZMK_INSOMNIA_PING_INTERVAL=15000
 # Allow second peripheral (for pairing trackball peripheral)
 CONFIG_BT_MAX_PAIRED=8
 
-
+# Allow second peripheral (for pairing trackball peripheral)
+#  NOTE:
+#   #define ZMK_BLE_PROFILE_COUNT (CONFIG_BT_MAX_PAIRED - CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS)
 #   #define ZMK_SPLIT_BLE_PERIPHERAL_COUNT CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS
 
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=5
