--- a/config/boards/shields/corne36/corne36_tball1.conf
+++ b/config/boards/shields/corne36/corne36_tball1.conf
@@ -44,7 +44,7 @@ CONFIG_PMW3610_SWAP_XY=y
 CONFIG_PMW3610_INVERT_X=y
 CONFIG_PMW3610_INVERT_Y=y
 CONFIG_PMW3610_REPORT_INTERVAL_MIN=12
-# CONFIG_PMW3610_LOG_LEVEL_DBG=y
+ CONFIG_PMW3610_LOG_LEVEL_DBG=y
 
 # # Endable ps2 trackpoint module
 # CONFIG_ZMK_INPUT_MOUSE_PS2_REPORT_INTERVAL_MIN=12
