--- a/build.yaml
+++ b/build.yaml
@@ -16,18 +16,18 @@ include:
   # - board: nice_nano_v2
   #   shield: settings_reset
 
-  - board: nice_nano_v2
-    shield: corne36_left
-  - board: nice_nano_v2
-    shield: corne36_right
-  - board: nice_nano_v2
-    shield: corne36_tball0
-  - board: nice_nano_v2
-    shield: corne36_tball1
-  - board: seeeduino_xiao_ble
-    shield: corne36_tpoint0
-  - board: seeeduino_xiao_ble
-    shield: corne36_tpad0
+  # - board: nice_nano_v2
+  #   shield: corne36_left
+  # - board: nice_nano_v2
+  #   shield: corne36_right
+  # - board: nice_nano_v2
+  #   shield: corne36_tball0
+  # - board: nice_nano_v2
+  #   shield: corne36_tball1
+  # - board: seeeduino_xiao_ble
+  #   shield: corne36_tpoint0
+  # - board: seeeduino_xiao_ble
+  #   shield: corne36_tpad0
 
  - board: nice_nano_v2
     shield: garbe_ball
