--- a/config/boards/shields/garbe_ball/garbe_ball.conf
+++ b/config/boards/shields/garbe_ball/garbe_ball.conf
@@ -29,10 +29,9 @@ CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=12
 # # CONFIG_ADNS9800_LOG_LEVEL_DBG=y
 
 # PMW3610 Driver
-CONFIG_PINCTRL=y
-CONFIG_GPIO=y
 CONFIG_SPI=y
 CONFIG_INPUT=y
+CONFIG_ZMK_MOUSE=y
 CONFIG_PMW3610=y
 CONFIG_PMW3610_SWAP_XY=y
 CONFIG_PMW3610_INVERT_X=y
@@ -79,11 +78,11 @@ CONFIG_ZMK_USB_LOGGING=y
 # CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
 
 # Allow second peripheral (for pairing trackball peripheral)
-CONFIG_BT_MAX_PAIRED=8
+# CONFIG_BT_MAX_PAIRED=8
 
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=5
-CONFIG_ZMK_SPLIT_BLE_PREF_WEAK_BOND=y
-CONFIG_ZMK_SPLIT_BLE_PREF_CONTINUOUS_SCAN_WINDOW=12000
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=5
+# CONFIG_ZMK_SPLIT_BLE_PREF_WEAK_BOND=y
+# CONFIG_ZMK_SPLIT_BLE_PREF_CONTINUOUS_SCAN_WINDOW=12000
 
 # Enable Analog Input
 # CONFIG_ADC=y
