--- a/build.yaml
+++ b/build.yaml
@@ -30,7 +30,7 @@ include:
     # shield: corne36_tpad0
 
   - board: nice_nano_v2
-    shield: garbe_ball
+    shield: kyria_left
  # - board: nice_nano_v2
  #   shield: nano18_left
  # - board: nice_nano_v2
