--- a/config/boards/shields/kyria/kyria_left.conf
+++ b/config/boards/shields/kyria/kyria_left.conf
@@ -61,13 +61,13 @@ CONFIG_PMW3610_LOG_LEVEL_DBG=y
 
 # Go to sleep after 5 mins (5*60*1000ms)
 # CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
-CONFIG_ZMK_SLEEP=y
+# CONFIG_ZMK_SLEEP=y
 # Go to sleep ONLY AFTER 16 seconds on disconnected to central,
 # central disconnection imply that it just fall asleep.
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=16000
-CONFIG_ZMK_INSOMNIA_PING_ON_START=y
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=16000
+# CONFIG_ZMK_INSOMNIA_PING_ON_START=y
 # set a ping before attempting to sleep AFTER 15 (minus 1 second, 1000ms)
-CONFIG_ZMK_INSOMNIA_PING_INTERVAL=15000
+# CONFIG_ZMK_INSOMNIA_PING_INTERVAL=15000
 
 # feat(ble): Support peripheral battery levels. #2045
 # CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
@@ -83,7 +83,6 @@ CONFIG_BT_MAX_PAIRED=8
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=5
 CONFIG_ZMK_SPLIT_BLE_PREF_WEAK_BOND=y
 CONFIG_ZMK_SPLIT_BLE_PREF_CONTINUOUS_SCAN_WINDOW=12000
-
 # Enable Analog Input
 # CONFIG_ADC=y
 # CONFIG_ADC_ASYNC=y
