--- a/config/west.yml
+++ b/config/west.yml
@@ -1,79 +1,63 @@
-# manifest:
-#   remotes:
-#     - name: zmkfirmware
-#       url-base: https://github.com/zmkfirmware
-#     - name: badjeff
-#       url-base: https://github.com/badjeff
-#   projects:
-#     # - name: zmk
-#     #   remote: zmkfirmware
-#     #   revision: main
-#     #   import: app/west.yml
-#     - name: zmk
-#       remote: badjeff
-#       revision: feat/pointers-move-scroll
-#       import: app/west.yml
-#     - name: zmk-adns9800-driver
-#       remote: badjeff
-#       revision: main
-#     - name: zmk-pmw3610-driver
-#       remote: badjeff
-#       revision: main
-#     - name: zmk-analog-input-driver
-#       remote: badjeff
-#       revision: main
-#     - name: zmk-behavior-insomnia
-#       remote: badjeff
-#       revision: main
-#     - name: zmk-behavior-key-tempo
-#       remote: badjeff
-#       revision: main
-#     - name: zmk-behavior-mouse-key-toggle
-#       remote: badjeff
-#       revision: main
-#     - name: zmk-input-behavior-listener
-#       remote: badjeff
-#       revision: main
-#     - name: zmk-output-behavior-listener
-#       remote: badjeff
-#       revision: main
-#     - name: zmk-hid-io
-#       remote: badjeff
-#       revision: main
-#     - name: zmk-split-peripheral-input-relay
-#       remote: badjeff
-#       revision: main
-#     - name: zmk-split-peripheral-bonding-tweak
-#       remote: badjeff
-#       revision: main
-#     - name: zmk-drv2605-driver
-#       remote: badjeff
-#       revision: main      
-#     # - name: zmk-behavior-set-default-layer
-#     #   remote: badjeff
-#     #   revision: main
-#     - name: kb_zmk_ps2_mouse_trackpoint_driver
-#       remote: badjeff
-#       revision: main
-#     - name: cirque-input-module
-#       remote: badjeff
-#       revision: main
-#   self:
-#     path: config
-
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base: https://github.com/petejohanson
+      url-base: https://github.com/zmkfirmware
     - name: badjeff
       url-base: https://github.com/badjeff
   projects:
+    # - name: zmk
+    #   remote: zmkfirmware
+    #   revision: main
+    #   import: app/west.yml
     - name: zmk
-      remote: zmkfirmware
+      remote: badjeff
       revision: feat/pointers-move-scroll
       import: app/west.yml
+    - name: zmk-adns9800-driver
+      remote: badjeff
+      revision: main
     - name: zmk-pmw3610-driver
+      remote: badjeff
+      revision: main
+    - name: zmk-analog-input-driver
+      remote: badjeff
+      revision: main
+    - name: zmk-behavior-insomnia
+      remote: badjeff
+      revision: main
+    - name: zmk-behavior-key-tempo
+      remote: badjeff
+      revision: main
+    - name: zmk-behavior-mouse-key-toggle
+      remote: badjeff
+      revision: main
+    - name: zmk-input-behavior-listener
+      remote: badjeff
+      revision: main
+    - name: zmk-output-behavior-listener
+      remote: badjeff
+      revision: main
+    - name: zmk-hid-io
+      remote: badjeff
+      revision: main
+    - name: zmk-split-peripheral-input-relay
+      remote: badjeff
+      revision: main
+    - name: zmk-split-peripheral-bonding-tweak
+      remote: badjeff
+      revision: main
+    - name: zmk-drv2605-driver
+      remote: badjeff
+      revision: main      
+    # - name: zmk-behavior-set-default-layer
+    #   remote: badjeff
+    #   revision: main
+    - name: kb_zmk_ps2_mouse_trackpoint_driver
+      remote: badjeff
+      revision: main
+    - name: cirque-input-module
       remote: badjeff
       revision: main
   self:
     path: config
+
